# AutoFedProfile

./: .gitignore  Readme.md  dataset.md  dataset_folder_organization.md  noms.md  requirements.txt  research_plan.md
datasets/: Data.md  DataExplorationPlan.md  Datasets.md  Meta.md  Readme.md
docs/: Readme.md  notes-Experiments.md  notes-contribution.md
notebooks/: LocalAutoencoder-crossVal.ipynb  LocalAutoencoder.ipynb  LocalAutoencoder_ccs+rec-recons.ipynb  (+15 more)
tensorflow-federated-variational-autoencoder/: README.md  malware_detection.ipynb  pyproject.toml
tensorflow-federated-variational-autoencoder/outputs/2025-04-23/16-14-08/: results.json
tensorflow-federated-variational-autoencoder/outputs/2025-04-23/16-17-21/: results.json
tensorflow-federated-variational-autoencoder/outputs/2025-04-28/07-39-28/: results.json  run_config.json
tensorflow-federated-variational-autoencoder/outputs/2025-04-28/08-46-29/: run_config.json
tensorflow-federated-variational-autoencoder/outputs/2025-04-28/09-12-29/: results.json
tensorflow-federated-variational-autoencoder/outputs/2025-04-28/10-11-35/: results.json
tensorflow-federated-variational-autoencoder/outputs/2025-04-28/11-26-15/: run_config.json
tensorflow-federated-variational-autoencoder/outputs/2025-04-28/11-34-15/: results.json
tensorflow-federated-variational-autoencoder/outputs/2025-04-28/11-47-07/: results.json  run_config.json
tensorflow-federated-variational-autoencoder/outputs/2025-04-28/12-00-48/: results.json  run_config.json
tensorflow-federated-variational-autoencoder/outputs/2025-04-28/12-25-38/: results.json  run_config.json
tensorflow-federated-variational-autoencoder/outputs/2025-04-28/12-34-04/: results.json  run_config.json
tensorflow-federated-variational-autoencoder/outputs/2025-04-29/19-14-37/: results.json  run_config.json
tensorflow-federated-variational-autoencoder/outputs/2025-04-29/19-27-48/: results.json
tensorflow-federated-variational-autoencoder/outputs/2025-04-29/19-31-04/: results.json
tensorflow-federated-variational-autoencoder/outputs/2025-04-29/19-39-14/: results.json  run_config.json
tensorflow-federated-variational-autoencoder/tensorflow_federated_variational_autoencoder/: client_app.py  client_app_good.py  server_app.py  server_app_good.py  strategy.py  strategy_good.py  task.py  task_good.py
(+58967 files in other folders)
